# directorai

./: .editorconfig  .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  CLAUDE_DESKTOP.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts
apps/context-engine/: README.md  package.json  pyproject.toml
apps/context-engine/src/directorai_context/: __init__.py  config.py  logger.py  main.py  models.py
apps/context-engine/src/directorai_context/jobs/: __init__.py  queue.py
apps/context-engine/src/directorai_context/modules/: __init__.py  analyze_clip.py  assemble.py  audio_analyze.py  beat.py  cluster.py  color.py  color_analyze.py  dead_air.py  editorial_order.py  editorial_planner.py  embeddings.py  frame_sampler.py  hardware.py  ingest.py  prefilter.py  quality.py  recut_pipeline.py  reframe.py  scene.py  scene_class.py  scene_semantic.py  silences.py  speed_analyze.py  speed_plan.py  speed_render.py  transcribe.py  video_map.py  vision.py  vision_budget.py  vision_understand.py
apps/context-engine/src/directorai_context/storage/: db.py  (+3 more)
apps/context-engine/tests/: test_analyze_clip.py  test_api.py  test_assemble.py  test_assemble_integration.py  test_audio_analyze.py  test_color.py  test_config.py  test_dead_air.py  test_editorial_planner.py  test_frame_sampler.py  test_ingest.py  test_jobs.py  test_models.py  test_quality.py  test_scene.py  test_scene_class.py  test_silences.py  test_speed_plan.py  test_speed_render.py  test_storage.py  test_vision_budget.py
(+360 files in other folders)
