[project]
name = "directorai-context-engine"
version = "0.1.0"
description = "DirectorAI Python ML service: transcribe, scene detect, vision, beat tracking"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    # Audio / video
    "faster-whisper>=1.0.3",
    "scenedetect[opencv]>=0.6.5",
    "librosa>=0.10.2",
    "soundfile>=0.12.1",
    # Vision
    "pillow>=10.4.0",
    "anthropic>=0.36.0",
    # Embeddings + vector store
    "sentence-transformers>=3.2.0",
    "chromadb>=0.5.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF", "ASYNC", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/directorai_context"]
